--- a/2025fallLean4Teach/_quarto-website.yml
+++ b/2025fallLean4Teach/_quarto-website.yml
@@ -2,6 +2,6 @@ project:
   type: website
 
 website:
-  # site-url: "https://sun123zxy.github.io/sunquartex/"
+  site-url: "https://sun123zxy.github.io/2025fall-lean4-teach/"
   sidebar:
     contents: auto
