--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          # To install LaTeX to build PDF book 
+          # To install LaTeX to build PDF book
           # tinytex: true 
           # uncomment below and fill to pin a version
           version: 1.7.34
@@ -46,7 +46,7 @@ jobs:
         uses: actions/setup-python@v3
 
       - name: Setup Python dependencies
-        run: python3 -m pip install 2025fallLean4Teach/.
+        run: python3 -m pip install doc/.
 
       # - name: Render Quarto Project
       #   uses: quarto-dev/quarto-actions/render@v2
@@ -56,7 +56,7 @@ jobs:
         uses: quarto-dev/quarto-actions/publish@v2
         with:
           target: gh-pages
-          path: 2025fallLean4Teach/
+          path: doc/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # this secret is always available for github actions
           QUARTO_PROFILE: website
