--- a/doc/_filter.yml
+++ b/doc/_filter.yml
@@ -1,11 +1,11 @@
 
 filters:
   - at: post-quarto
-    path: "./_extensions/pandoc-ext/list-table/list-table.lua"
-  - "./_assets/tikz.lua"
+    path: _extensions/pandoc-ext/list-table/list-table.lua
+  - _assets/tikz.lua
 
 shortcodes:
-  - "./_assets/lean-include.lua"
+  - _assets/lean-include.lua
 
 format:
   html:
