--- a/doc/_quarto-website.yml
+++ b/doc/_quarto-website.yml
@@ -2,6 +2,6 @@ project:
   type: website
 
 website:
-  site-url: "https://sun123zxy.github.io/2025fall-lean4-teach/"
+  site-url: "https://sun123zxy.github.io/sunquartex/"
   sidebar:
     contents: auto
