--- a/doc/_format.yml
+++ b/doc/_format.yml
@@ -3,7 +3,9 @@ csl: _assets/ieee.csl
 syntax-definitions: 
   - _assets/lean.xml
 
-number-depth: 3 # number sections, subsections
+shift-heading-level-by: -1 # so that h2 matches section, h3 matches subsection
+number-depth: 3
+toc-depth: 3
 
 cap-location: bottom
 fig-align: center
@@ -40,7 +42,7 @@ format:
   gfm:
     wrap: preserve
   beamer:
-    # slide-level: # left default to handle automatically, see Pandoc manual
+    slide-level: 4
     pdf-engine: xelatex
     theme: madrid
     cite-method: biblatex # override the default csl cite method
