--- a/doc/_quarto-book.yml
+++ b/doc/_quarto-book.yml
@@ -3,25 +3,28 @@ project:
 
 book:
   title: Introduction to Formal Mathematics with Lean 4
-  author: 钟星宇
-  date: 2025/11/29
+  author: Xingyu Zhong
+  date: 2025/11/30
   chapters:
     - index.qmd
-    - part: Introduction
-      - 00-poster.qmd
-      - 01-introduction.qmd
     - part: Lectures
-      - 02-logic.qmd
-      - 03-logic.qmd
-      - 04-logic.qmd
-      - 05-type.qmd
-      - 06-ineq.qmd
-      - 07-analysis.qmd
-      - 08-group.qmd
-      - 09-subgroup.qmd
-      - 10-quotient.qmd
+      chapters:
+        - 01-intro.qmd
+        - 02-logic.qmd
+        - 03-logic.qmd
+        - 04-logic.qmd
+        - 05-type.qmd
+        - 06-ineq.qmd
+        - 07-analysis.qmd
+        - 08-group.qmd
+        - 09-subgroup.qmd
+        - 10-quotient.qmd
+  appendices:
+    - poster.qmd
 
-bibliography: examples/bibliography.bib
+# bibliography: examples/bibliography.bib
+
+shift-heading-level-by: 0 # Seemingly Quarto will -1 automatically for books. So leave this at 0.
 
 format:
   pdf:
