--- a/doc/_quarto.yml
+++ b/doc/_quarto.yml
@@ -1,5 +1,5 @@
 project:
-  title: 2025 Fall Lean 4 Teach
+  title: Introduction to Formal Mathematics with Lean 4
   output-dir: _output
 
 profile:
