--- a/lake-manifest.json
+++ b/lake-manifest.json
@@ -91,5 +91,5 @@
    "inputRev": "v4.26.0",
    "inherited": true,
    "configFile": "lakefile.toml"}],
- "name": "«2025fall-lean4-teach»",
+ "name": "«lean4-formal-math-intro»",
  "lakeDir": ".lake"}
